# Synapse

./: Cargo.toml  README.md  install.sh  run.sh  synapse.db  synapse_resume_description.txt
.github/workflows/: release.yml
src/: diff.rs  host_discovery.rs  main.rs  packet.rs  probe.rs  scanner.rs  utils.rs
