[package]
name = "synapse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
ipnetwork = "0.20"
pnet = "0.34.0"
rand = "0.10.0"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", features = ["ring", "tls12"] }
tokio-rustls = { version = "0.26", features = ["tls12"] }
x509-parser = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
